<resources>
    <string name="app_name">application1</string>
    <string name="my_profil">My Profile</string>
    <string name="edit_profil">Edit profile</string>
    <string name="age">age:32</string>
    <string name="name">michel moustache</string>
    <string name="todo">profile picture</string>
    <string name="city_of_birth_arras">City of birth : Arras</string>
    <string name="status_first_android_training_today">Status : First Android training today ! </string>
</resources>
