<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="#000000"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/my_profil"
            android:textColor="#ffffff"
            tools:targetApi="o"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profilpicture"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/default_pp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/age" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/city_of_birth_arras" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/status_first_android_training_today" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/edit_profil"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>
